Contest: compute total scores for bundle contest scoreboard (#769)